<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/itemNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"/>

        <EditText
            android:id="@+id/buyBeforeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buy_before"
            android:focusable="false"
            android:clickable="true"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/quantityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/priceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"/>

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
