<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/itemNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"/>

        <EditText
            android:id="@+id/buyBeforeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buy_before"
            android:focusable="false"
            android:clickable="true"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/quantityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/priceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/home_logout_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/divider"
            android:backgroundTint="@null"
            android:text="Home | Logout"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
