<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tokenEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_token"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/nicknameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_nickname"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_list"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        app:cornerRadius="12dp"
        app:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"/>
</LinearLayout>